[gd_scene load_steps=47 format=3 uid="uid://cnppx6ita6to7"]

[ext_resource type="Shader" uid="uid://b0u1rnkg4e58k" path="res://Code/Water.gdshader" id="1_fq0cl"]
[ext_resource type="Shader" uid="uid://d25ja7f81dbuc" path="res://Code/WaterTest.gdshader" id="1_jyqft"]
[ext_resource type="Texture2D" uid="uid://ir5im6i6yx6m" path="res://iceberg-1440x900.png" id="1_sxkr1"]
[ext_resource type="Script" uid="uid://bxacuet2g7a6j" path="res://Code/FishingUI.gd" id="2_2w5on"]
[ext_resource type="Texture2D" uid="uid://bnvyre82pr3up" path="res://water_texture.png" id="2_3tgeq"]
[ext_resource type="Texture2D" uid="uid://ykcj55vkxf4o" path="res://reel-part.png" id="3_346fj"]
[ext_resource type="Script" uid="uid://daq2l0pc2bhkd" path="res://Code/SlantSea.gd" id="3_c5snn"]
[ext_resource type="Script" uid="uid://ddkh23mry6ajl" path="res://Code/Player.gd" id="4_0sclb"]
[ext_resource type="Texture2D" uid="uid://deaon2hnhewve" path="res://sky.png" id="4_aht7i"]
[ext_resource type="Texture2D" uid="uid://c74os0eikxw43" path="res://iceberg-real.png" id="5_c4ay3"]
[ext_resource type="Texture2D" uid="uid://pbrhsy3kjupy" path="res://player-real.png" id="5_sxkr1"]
[ext_resource type="Script" uid="uid://xquxn635vn76" path="res://Code/FishingController.gd" id="6_fq0cl"]
[ext_resource type="FontFile" uid="uid://dsitgff6pn1mm" path="res://ARCADECLASSIC.TTF" id="7_3tgeq"]
[ext_resource type="AudioStream" uid="uid://dchvingcebrye" path="res://Sounds/reel-rod.ogg" id="7_hwpts"]
[ext_resource type="AudioStream" uid="uid://dmjowpdjrukd3" path="res://Sounds/rod-cast.ogg" id="8_erwvk"]
[ext_resource type="AudioStream" uid="uid://bwuik2knw5r8i" path="res://Sounds/catch-fish-jingle.ogg" id="8_jyqft"]
[ext_resource type="Script" uid="uid://s6n6w58chap4" path="res://Code/Inventory.gd" id="8_xvtyr"]
[ext_resource type="AudioStream" uid="uid://cbdyek8vdpoag" path="res://Sounds/fish-biting.ogg" id="10_2w5on"]
[ext_resource type="Texture2D" uid="uid://bjtvoymy83vhf" path="res://alert.png" id="10_c4ay3"]
[ext_resource type="Script" uid="uid://r1lkqjda6cd3" path="res://Code/Alert.gd" id="11_aht7i"]
[ext_resource type="Texture2D" uid="uid://c2f3ssqvepkj1" path="res://water_splash.png" id="12_5jffn"]
[ext_resource type="Texture2D" uid="uid://dmjyem4hfqefj" path="res://star.png" id="13_kpo4j"]
[ext_resource type="Script" uid="uid://caf26xtsl12se" path="res://Code/FishingRod.gd" id="14_4n42c"]
[ext_resource type="Texture2D" uid="uid://4x4sffp2yjn2" path="res://fishing-rod.png" id="15_c5snn"]
[ext_resource type="Texture2D" uid="uid://cmnllokiygu1u" path="res://Fish/goldfish.png" id="16_xvtyr"]
[ext_resource type="Script" uid="uid://cgqmg5jc04foy" path="res://Code/Bait.gd" id="17_sxkr1"]
[ext_resource type="Texture2D" uid="uid://c0b5mxf013d6" path="res://float.png" id="18_fq0cl"]
[ext_resource type="AudioStream" uid="uid://dri0kw1yhx5xv" path="res://Sounds/bait-splash.ogg" id="19_hwpts"]
[ext_resource type="AudioStream" uid="uid://mt228vjyenek" path="res://Sounds/fishing-on-the-lake-310740.mp3" id="21_5jffn"]
[ext_resource type="AudioStream" uid="uid://c5v7uvavx25jw" path="res://Sounds/bait-roll.ogg" id="26_kpo4j"]
[ext_resource type="Script" uid="uid://dnx0uxqvujw0h" path="res://Code/Fish.gd" id="29_4n42c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3tgeq"]
shader = ExtResource("1_jyqft")
shader_parameter/transparency = 1.0
shader_parameter/color0 = Color(0.16209206, 0.44749683, 0.99999994, 1)
shader_parameter/color1 = Color(0.28030762, 0.49561113, 1, 1)
shader_parameter/color2 = Color(0.101712234, 0.36861393, 0.9999996, 1)
shader_parameter/color3 = Color(0.13170215, 0.36509743, 0.99999183, 1)
shader_parameter/color4 = Color(4.10074e-05, 0.5252694, 0.97414595, 1)
shader_parameter/color5 = Color(0.070444725, 0.3079188, 1, 1)
shader_parameter/Direction1 = Vector2(1, 0)
shader_parameter/Direction2 = Vector2(1, 1)
shader_parameter/Speed1 = 5.0
shader_parameter/Speed2 = 5.0
shader_parameter/noise = ExtResource("2_3tgeq")
shader_parameter/pixel_size = 500
shader_parameter/heatAmplitude = 0.02000000095
shader_parameter/heatPeriod = 0.0
shader_parameter/heatPhaseShift = 0.0
shader_parameter/heatUpperLimit = 1.00000002375
shader_parameter/slant_amount = 0.20900003367749995
shader_parameter/top_shrink = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4n42c"]
shader = ExtResource("1_jyqft")
shader_parameter/transparency = 1.0
shader_parameter/color0 = Color(0.88294894, 0.56022084, 0.6456264, 1)
shader_parameter/color1 = Color(0.50096047, 0.4836613, 0.99423105, 1)
shader_parameter/color2 = Color(0.82067764, 0.5301326, 0.7152097, 1)
shader_parameter/color3 = Color(0.8142138, 0.34648696, 0.45145756, 1)
shader_parameter/color4 = Color(0.71906537, 0.52992415, 0.24669564, 1)
shader_parameter/color5 = Color(0.98467726, 0.7845336, 0.8303391, 1)
shader_parameter/Direction1 = Vector2(1, 0)
shader_parameter/Direction2 = Vector2(5, 1)
shader_parameter/Speed1 = 10.0
shader_parameter/Speed2 = 10.0
shader_parameter/noise = ExtResource("2_3tgeq")
shader_parameter/pixel_size = 100
shader_parameter/heatAmplitude = 0.0
shader_parameter/heatPeriod = 0.0
shader_parameter/heatPhaseShift = 0.0
shader_parameter/heatUpperLimit = 0.0
shader_parameter/slant_amount = 0.5
shader_parameter/top_shrink = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jyqft"]
shader = ExtResource("1_fq0cl")
shader_parameter/wave_speed_x = 0.5
shader_parameter/wave_speed_y = 0.3
shader_parameter/wave_amplitude = 5.0
shader_parameter/wave_frequency = 20.0
shader_parameter/water_color = Vector4(0.23, 0.52, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xvtyr"]
bg_color = Color(0.5507635, 0.4504931, 0.16462323, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.35899377, 0.2782324, 0.13439727, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c4ay3"]
bg_color = Color(0.29726213, 0.6625997, 0.70501643, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jyqft"]
bg_color = Color(0.67929447, 0.40873823, 0.11109231, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3tgeq"]
bg_color = Color(0.3892793, 0.21361017, 0.096350245, 1)
border_width_left = 7
border_width_top = 7
border_width_bottom = 7
border_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_kjvhd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_sc1dx"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5tuhn"]
_data = {
&"RESET": SubResource("Animation_kjvhd"),
&"idle": SubResource("Animation_sc1dx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]
size = Vector2(50, 72)

[sub_resource type="FontVariation" id="FontVariation_sweqy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xvtyr"]
size = Vector2(49, 81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sxkr1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyqft"]

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_3tgeq")
offset_left = -719.0
offset_top = -455.0
offset_right = 746.0
offset_bottom = 444.0
texture = ExtResource("2_3tgeq")

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_4n42c")
position = Vector2(55.83191, -6.3365173)
scale = Vector2(1.0663875, 1.0119332)
texture = ExtResource("2_3tgeq")
polygon = PackedVector2Array(-824, -242, -835, 513, 831, 531, 824.4357, -288.22403, -841, -307)
script = ExtResource("3_c5snn")

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_left = -849.0
offset_top = -549.0
offset_right = 853.0
offset_bottom = 586.0
color = Color(0.3364876, 0.58849144, 1, 1)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_jyqft")
offset_left = -864.0
offset_top = -580.0
offset_right = 838.0
offset_bottom = 555.0
color = Color(0.3364876, 0.58849144, 1, 1)

[node name="SkyHehe" type="Sprite2D" parent="."]
visible = false
position = Vector2(44, -442)
scale = Vector2(2.867674, 0.87454623)
texture = ExtResource("4_aht7i")
flip_v = true

[node name="Sky" type="ColorRect" parent="."]
visible = false
offset_left = -1451.0
offset_top = -1145.0
offset_right = 2093.0
offset_bottom = -10.0
color = Color(0.2037744, 0.6483306, 0.8854639, 1)

[node name="Iceberg" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_sxkr1")

[node name="IcebergTest" type="Sprite2D" parent="."]
position = Vector2(27, 9)
texture = ExtResource("5_c4ay3")

[node name="Inventory" type="CanvasLayer" parent="."]
offset = Vector2(200, 0)
transform = Transform2D(1, 0, 0, 1, 200, 0)
script = ExtResource("8_xvtyr")

[node name="Panel" type="Panel" parent="Inventory"]
offset_right = 1040.0
offset_bottom = 320.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xvtyr")

[node name="GridContainer" type="GridContainer" parent="Inventory/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 6

[node name="FishingUI" type="CanvasLayer" parent="."]
script = ExtResource("2_2w5on")

[node name="RodTension" type="Label" parent="FishingUI"]
visible = false
offset_right = 210.0
offset_bottom = 137.0
theme_override_font_sizes/font_size = 100

[node name="ReelUI" type="Sprite2D" parent="FishingUI"]
z_index = 10
position = Vector2(400, 600)
scale = Vector2(2, 2)
texture = ExtResource("3_346fj")

[node name="FishEscapeTimer" type="Label" parent="FishingUI"]
offset_right = 40.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 22

[node name="FishReelTimer" type="Label" parent="FishingUI"]
offset_right = 40.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 22

[node name="FishEscapeBar" type="ProgressBar" parent="FishingUI"]
offset_top = 7.0
offset_right = 661.0
offset_bottom = 38.0
theme_override_styles/background = SubResource("StyleBoxFlat_c4ay3")
value = 100.0
show_percentage = false

[node name="FishReelBar" type="ProgressBar" parent="FishingUI"]
offset_top = 68.0
offset_right = 662.0
offset_bottom = 151.0
theme_override_fonts/font = ExtResource("7_3tgeq")
theme_override_font_sizes/font_size = 50
theme_override_styles/background = SubResource("StyleBoxFlat_jyqft")
theme_override_styles/fill = SubResource("StyleBoxFlat_3tgeq")
value = 100.0

[node name="FishName" type="Label" parent="FishingUI"]
offset_left = 68.0
offset_top = 775.0
offset_right = 1509.0
offset_bottom = 955.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_3tgeq")
theme_override_font_sizes/font_size = 60
text = "You caught nothing!"
horizontal_alignment = 1

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("4_0sclb")
fishing_con_path = NodePath("../FishingController")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture_filter = 1
texture = ExtResource("5_sxkr1")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_5tuhn")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_hqtel")

[node name="Label" type="Label" parent="Player"]
visible = false
offset_left = -60.0
offset_top = -80.0
offset_right = 75.0
offset_bottom = -52.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_sweqy")
theme_override_font_sizes/font_size = 20
text = "Press E to fish"

[node name="PushArea" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/PushArea"]
position = Vector2(-1.5, 3.5)
shape = SubResource("RectangleShape2D_xvtyr")

[node name="FishingController" type="Node2D" parent="."]
script = ExtResource("6_fq0cl")

[node name="RodReelSound" type="AudioStreamPlayer2D" parent="FishingController"]
stream = ExtResource("7_hwpts")
parameters/looping = true

[node name="RodCastSound" type="AudioStreamPlayer2D" parent="FishingController"]
stream = ExtResource("8_erwvk")

[node name="CatchFishSound" type="AudioStreamPlayer2D" parent="FishingController"]
stream = ExtResource("8_jyqft")

[node name="FishBitingSound" type="AudioStreamPlayer2D" parent="FishingController"]
stream = ExtResource("10_2w5on")
parameters/looping = true

[node name="Alert" type="Sprite2D" parent="FishingController"]
texture = ExtResource("10_c4ay3")
script = ExtResource("11_aht7i")

[node name="WaterSplash" type="CPUParticles2D" parent="FishingController"]
emitting = false
texture = ExtResource("12_5jffn")
lifetime = 1.5
one_shot = true
explosiveness = 1.0
direction = Vector2(0, -1)
spread = 25.0
gravity = Vector2(0, 500)
initial_velocity_min = 200.0
initial_velocity_max = 300.0
angular_velocity_min = -90.0
angular_velocity_max = -90.0
damping_min = 0.1
damping_max = 0.1
scale_amount_max = 1.5

[node name="BaitSplash" type="CPUParticles2D" parent="FishingController"]
emitting = false
texture = ExtResource("12_5jffn")
lifetime = 0.75
one_shot = true
explosiveness = 1.0
direction = Vector2(0, -1)
gravity = Vector2(0, 500)
initial_velocity_min = 100.0
initial_velocity_max = 300.0
angular_velocity_min = -90.0
angular_velocity_max = -90.0
damping_min = 0.1
damping_max = 0.1
scale_amount_max = 1.5

[node name="StarParticles" type="CPUParticles2D" parent="FishingController"]
emitting = false
texture = ExtResource("13_kpo4j")
lifetime = 10.0
one_shot = true
explosiveness = 1.0
direction = Vector2(0, -1)
spread = 90.0
gravity = Vector2(0, 500)
initial_velocity_min = 200.0
initial_velocity_max = 300.0
angular_velocity_min = -90.0
angular_velocity_max = -90.0
damping_min = 0.1
damping_max = 0.1
scale_amount_max = 1.5

[node name="Music" type="AudioStreamPlayer2D" parent="FishingController"]
stream = ExtResource("21_5jffn")
volume_db = -10.0
parameters/looping = true

[node name="FishingRod" type="Node2D" parent="."]
script = ExtResource("14_4n42c")
player_path = NodePath("../Player")

[node name="Rod" type="Sprite2D" parent="FishingRod"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("15_c5snn")
centered = false
offset = Vector2(-15, -125)

[node name="RodTip" type="Node2D" parent="FishingRod/Rod"]
position = Vector2(115, -115)

[node name="FishingLine" type="Line2D" parent="."]
width = 2.0
default_color = Color(0, 0, 0, 1)

[node name="Bait" type="RigidBody2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("17_sxkr1")

[node name="BobGroup" type="Node2D" parent="Bait"]

[node name="BaitSprite" type="Sprite2D" parent="Bait/BobGroup"]
texture = ExtResource("18_fq0cl")

[node name="BaitArea" type="Area2D" parent="Bait"]

[node name="BaitAreaCollision" type="CollisionShape2D" parent="Bait/BaitArea"]
shape = SubResource("RectangleShape2D_sxkr1")

[node name="BaitRoll" type="AudioStreamPlayer2D" parent="Bait"]
stream = ExtResource("26_kpo4j")
parameters/looping = true

[node name="BaitSplash" type="AudioStreamPlayer2D" parent="Bait"]
stream = ExtResource("19_hwpts")

[node name="BaitCollision" type="CollisionShape2D" parent="Bait"]
light_mask = 2
visibility_layer = 2
shape = SubResource("RectangleShape2D_jyqft")

[node name="FishSprite" type="Sprite2D" parent="."]
texture = ExtResource("16_xvtyr")
script = ExtResource("29_4n42c")

[node name="Wall" type="StaticBody2D" parent="."]
visible = false
collision_layer = 5
collision_mask = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Wall"]
position = Vector2(0, -71)
polygon = PackedVector2Array(-404, 71, -377, 51, -352, 31, -309, 29, -249, 29, -106, 28, 76, 27, 227, 35, 336, 37, 413, 38, 439, 68, 515, 148, 466, -30, -417, -39, -465, -24, -403, 89)

[node name="Wall2" type="StaticBody2D" parent="."]
visible = false
collision_layer = 5
collision_mask = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Wall2"]
polygon = PackedVector2Array(-401, 119, -388, 197, -358, 238, -270, 270, -83, 280, 146, 284, 305, 278, 418, 228, 443, 151, 442, 8, 497, 81, 477, 327, -453, 311, -469.5459, 77.616066, -402, 12)

[node name="LandArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LandArea"]
polygon = PackedVector2Array(-317, 11, -355, 30, -380, 61, -399, 102, -398, 158, -393, 233, -370, 264, -306, 287, -220, 305, -103.9758, 310.35907, 42, 326, 125, 317, 213, 325, 392, 307, 442, 276, 440, 191, 449, 154, 434, 62, 408, 37, 307, 36, 229, 31, 112, 20, 17, 31, -234, 32, -318, 8)

[connection signal="body_entered" from="LandArea" to="Player" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="LandArea" to="Player" method="_on_area_2d_body_exited"]
